<resources>
    <string name="app_name">RannaGhar</string>
    <string name="title_activity_main_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_you">You</string>

    <string name="font_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_black">fonts/Roboto-Black.ttf</string>
    <string name="font_thin">fonts/Roboto-Thin.ttf</string>
    <string name="font_light">fonts/Roboto-Light.ttf</string>
    <string name="font_italic">fonts/Roboto-Italic.ttf</string>
    <string name="title_activity_main_new">MainNewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="action_Cart">Cart</string>
    <string name="menu_profile">profile</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_logout">logout</string>
    <string name="menu_favourite">favourite</string>
    <string name="menu_offer">Offer</string>
    <string name="menu_share">Share App</string>
    <string name="menu_news">News</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_chat">Chat with Whatsapp</string>
    <string name="about">RannaGhar is opening newly in Karimpur, with its grand opening on 2nd October 2020. During the current pandemic situation, it has become quite fearful to eat in crowded place like before. People are searching for safety. With this point in view we have decided to set up an online restaurant where everything from order to payment will be made online. Food will be delivered free of cost. The entire process has been made hassle free. There is an app called \'RannaGhar\' which can be easily downloaded from Google Play Store.
\n\n      The restaurant cuisine aims to provide Tandoor, Chinese , Indian &amp; Continental dishes to its customers. The food is prepared in a very hygienic condition by some of the best chefs. The names of various food items are provided in the app along with their price tag. So one can easily order food items from the app.
\n\n      We desire to provide the best quality food at reasonable price to our customers. Cash on delivery is available. So payment can easily be made at the time of delivery.
\n\n      Offering hygienic, healthy &amp; delicious food items is our sole moto.</string>
    <string name="menu_about">About</string>
    <string name="menu_order">My Order</string>
</resources>